--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       repo: 'https://github.com/JonJLevesque/Project2029',
       loadSidebar: true,
       subMaxLevel: 2,
+      relativePath: true,
       search: {
         placeholder: 'Search',
         noData: 'No Results',
