Switch to light theme with blue accent

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>Project 2029: A Mandate for Democratic Renewal</title>
   <meta name="description" content="A comprehensive policy blueprint for restoring and transforming American democracy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@4/lib/themes/dark.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <style>
     :root {
-      --theme-color: #42b983;
+      --theme-color: #2563eb;
     }
   </style>
 </head>
